kubernetes/home.vijayakumar.xyz/monitors/Prometheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitors
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - grafana.home.vijayakumar.xyz
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
